fix(Rain.Network): client not starting on flatpak